# yolo-capture

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: camera.csv  yolocap.conf
src/: camera_config.cpp  camera_config.h  capture_config.cpp  capture_config.h  common_type.h  main.cpp  spd_log.cpp  spd_log.h  task_manager.cpp  task_manager.h  yolo_capture.cpp  yolo_capture.h
